<resources>
    <string name="app_name">Estrella del Sur</string>


    <!-- Navigation -->
    <string name="navigation_drawer_open">Open navigation drawer</string>
    <string name="navigation_drawer_close">Close navigation drawer</string>
    <!--toolbar title activity usuario-->
    <string name="institucion.articulo.usuario">Articulos</string>
    <string name="institucion.comision.usuario">Comisión Directiva</string>
    <string name="institucion.direccion.usuario">Dirección Técnica</string>
    <!--toolbar title activity adeful-->
    <string name="institucion.articulo.adeful">Articulo</string>
    <!--<string name="institucion.comision.usuario">Comisión Directiva</string>-->
    <!--<string name="institucion.direccion.usuario">Dirección Técnica</string>-->


    <!-- Array Tablas Adeful  -->
    <string-array name="tablasAdefulArray">
    <item>ARTICULO_ADEFUL</item>
    <item>COMISION_ADEFUL</item>
    <item>DIRECCION_ADEFUL</item>
    <item>EQUIPO_ADEFUL</item>
    <item>CANCHA_ADEFUL</item>
    <item>FIXTURE_ADEFUL</item>
    <item>RESULTADO_ADEFUL</item>
    <item>JUGADOR_ADEFUL</item>
    <item>ENTRENAMIENTO_ADEFUL</item>
    <item>SANCION_ADEFUL</item>
    <item>NOTICIA_ADEFUL</item>
    <item>FOTO_ADEFUL</item>
    <item>PUBLICIDAD_ADEFUL</item>
    </string-array>
    <!-- Array Modulo  -->
    <string-array name="moduloArray">
        <item>INSTITUCION</item>
        <item>MI EQUIPO</item>
        <item>LIGA</item>
        <item>SOCIAL</item>
        <item>PERMISO</item>

    </string-array>

    <!-- Array Modulo usuario  -->
    <string-array name="moduloArrayUsuario">
        <item>INSTITUCION</item>
        <item>MI EQUIPO</item>
        <item>LIGA</item>
        <item>SOCIAL</item>
    </string-array>

    <!-- Array SubModulo -->
    <string-array name="subModuloArray">
        <!--1-->
        <item>Articulos</item>
        <item>Comisión Directiva</item>
        <item>Dirección Técnica</item>
        <!--2-->
        <item>Fixture</item>
        <item>Resultados</item>
        <item>Jugadores</item>
        <item>Entrenamientos</item>
        <item>Sancionados</item>
        <!--3-->
        <item>Adeful</item>
        <item>Lifuba</item>
        <!--4-->
        <item>Notificación</item>
        <item>Noticias</item>
        <item>Fotos</item>
        <item>Publicidad</item>
        <!--5-->
        <item>Usuarios</item>
        <item>Permisos</item>
    </string-array>

    <!-- Array SubModulo -->
    <string-array name="subModuloArrayUsuario">
        <!--1-->
        <item>Articulos</item>
        <item>Comisión Directiva</item>
        <item>Dirección Técnica</item>
        <!--2-->
        <item>Fixture</item>
        <item>Jugadores</item>
        <item>Entrenamientos</item>
        <item>Sancionados</item>
        <!--3-->
        <item>Adeful</item>
        <item>Lifuba</item>
        <!--4-->
        <item>Notificación</item>
        <item>Noticias</item>
        <item>Fotos</item>
        <item>Publicidad</item>

    </string-array>


    <!-- Array ListView Estrella -->
    <string-array name="NavigationInstitucion">
        <item>Articulos</item>
        <item>Comisión Directiva</item>
        <item>Dirección Técnica</item>
    </string-array>

    <!-- Array ListView MI equipo -->
    <string-array name="NavigationCarga">
        <item>Fixture</item>
        <item>Resultados</item>
        <item>Jugadores</item>
        <item>Entrenamientos</item>
        <item>Sancionados</item>
    </string-array>
    <!-- Array ListView MI equipo -->
    <string-array name="NavigationCargaUsuario">
        <item>Fixture</item>
        <item>Jugadores</item>
        <item>Entrenamientos</item>
        <item>Sancionados</item>
    </string-array>

    <!-- Array ListView LigaAdeful -->
    <string-array name="NavigationLiga">
        <item>Adeful</item>
        <item>Lifuba</item>
    </string-array>

    <!--&lt;!&ndash; Array ListView LigaAdeful &ndash;&gt;-->
    <!--<string-array name="NavigationLigaLifuba">-->
        <!--<item>Lifuba</item>-->
    <!--</string-array>-->

    <!-- Array ListView LigaAdeful -->
    <string-array name="NavigationSocial">
        <item>Notificación</item>
        <item>Noticias</item>
        <item>Fotos</item>
        <item>Publicidad</item>
    </string-array>

    <!-- Array ListView PermisoAdeful -->
    <string-array name="NavigationPermiso">
        <item>Usuarios</item>
        <item>Permisos</item>
    </string-array>
    <!-- menu -->
    <string name="action_usuario">USUARIO</string>
    <string name="action_permisos">PERMISOS</string>
    <string name="action_administrador">ADMINISTRADOR</string>
    <string name="action_lifuba">LIFUBA</string>
    <string name="action_adeful">ADEFUL</string>
    <string name="action_posicion">POSICION</string>
    <string name="action_cerrar">CERRAR</string>
    <string name="action_puesto">PUESTO</string>
    <string name="action_cargo">CARGO</string>
    <string name="action_consultar">Consultar</string>
    <string name="action_guardar">Guardar</string>
    <string name="action_subir">Subir</string>
    <string name="action_eliminar">Eliminar</string>

    <!--COMISION-->
    <!-- Array SPINNER CARGO/DIRECCION  -->
    <string-array name="ceroSpinnerCargo">
        <item><font fgcolor="#FF33B5E5">Genere un cargo.</font></item>
    </string-array>
    <string name="ceroSpinnerCargo">Genere un cargo.</string>

    <!--FIXTURE-->
    <!-- Array SPINNER DIVISION  -->
    <string-array name="ceroSpinnerDivision">
        <item>Genere una división.</item>
    </string-array>
    <!-- Array SPINNER DIVISION  -->
    <string name="ceroSpinnerDivision">Genere una división.</string>
    <!-- Array SPINNER TORNEO  -->
    <string-array name="ceroSpinnerTorneo">
        <item>Genere un torneo.</item>
    </string-array>
    <string name="ceroSpinnerTorneo">Genere un torneo.</string>
    <string name="torneo_actual">Sin Torneo Asignado.</string>
    <!-- Array SPINNER FECHA  -->
    <string-array name="ceroSpinnerFecha">
        <item>Genere un fecha.</item>
    </string-array>
    <string name="ceroSpinnerFecha">Genere un fecha.</string>
    <!-- Array SPINNER ANIO  -->
    <string-array name="ceroSpinnerAnio">
        <item>Genere un año.</item>
    </string-array>
    <string name="ceroSpinnerAnio">Genere un año.</string>
    <!-- Array SPINNER CANCHA  -->
    <string-array name="ceroSpinnerCancha">
        <item>Genere una cancha.</item>
    </string-array>
    <string name="ceroSpinnerCancha">Genere una cancha.</string>
    <!-- Array SPINNER EQUIPO  -->
    <string-array name="ceroSpinnerEquipo">
        <item>Genere un equipo.</item>
    </string-array>
    <string name="ceroSpinnerEquipo">Genere un equipo.</string>
    <!-- mapa cancha -->
    <string name="error_internet">Verifique su conexión de Internet.</string>
    <string name="error_internet_direccion">No se puede acceder a la dirección seleccionada.\nVerifique su conexión a Interner.</string>
    <!--JUGADOR-->
    <!-- Array SPINNER POSICION  -->
    <string-array name="ceroSpinnerPosicion">
        <item>Genere una posición.</item>
    </string-array>
    <!-- Array SPINNER POSICION  -->
    <string name="ceroSpinnerPosicion">Genere una posición.</string>
    <!-- Array SPINNER JUGADOR  -->
    <string-array name="ceroSpinnerJugador">
        <item>Genere un jugador.</item>
    </string-array>
    <!-- Array SPINNER POSICION  -->
    <string name="ceroSpinnerJugador">Genere un jugador.</string>

    <!-- Array SPINNER USUARIO  -->
    <string-array name="ceroSpinnerUsuario">
        <item>Genere un usuario.</item>
    </string-array>
    <string name="ceroSpinnerUsuario">Genere un usuario.</string>


    <!-- Array fecha  -->
    <string-array name="fechaArray">
        <item>1</item>
        <item>2</item>
        <item>3</item>
        <item>4</item>
        <item>5</item>
        <item>6</item>
        <item>7</item>
        <item>8</item>
        <item>9</item>
        <item>10</item>
        <item>11</item>
        <item>12</item>
        <item>13</item>
        <item>14</item>
        <item>15</item>
        <item>16</item>
        <item>17</item>
        <item>18</item>
        <item>19</item>
        <item>20</item>
    </string-array>

    <!-- Array Anio  -->
    <string-array name="anioArray">
        <item>2016</item>
        <item>2017</item>
        <item>2018</item>
        <item>2019</item>
        <item>2020</item>
        <item>2021</item>
        <item>2022</item>
        <item>2023</item>
        <item>2024</item>
        <item>2025</item>

    </string-array>

    <!-- Array Mes  -->
    <string-array name="mesArray">
        <item>ENERO</item>
        <item>FEBRERO</item>
        <item>MARZO</item>
        <item>ABRIL</item>
        <item>MAYO</item>
        <item>JUNIO</item>
        <item>JULIO</item>
        <item>AGOSTO</item>
        <item>SEPTIEMBRE</item>
        <item>OCTUBRE</item>
        <item>NOVIEMBRE</item>
        <item>DICIEMBRE</item>
    </string-array>
    <!-- Array tarjetas  -->
    <string-array name="tarjetaArray">
        <item>0</item>
        <item>1</item>
        <item>2</item>
        <item>3</item>
        <item>4</item>
        <item>5</item>
        <item>6</item>
        <item>7</item>
        <item>8</item>
        <item>9</item>
        <item>10</item>
    </string-array>

    <!--MENSAJE ERROR-->
    <string name="error_data_base">Error en la base de datos interna,
        vuelva a intentar.\nSi el error persiste comuniquese con soporte.</string>
    <!--MENSAJE ERROR INTERNET-->
    <string name="error_without_internet">Sin conexión a Internet. Vuelva a intentarlo.</string>

    <!--USUARIO-->
    <string-array name="vacioSpinnerDivision">
        <item>Sin Datos.</item>
    </string-array>
    <string name="vacioSpinnerDivision">Sin Datos.</string>
    <!--BANNER-->
    <string name="banner_articulo">ca-app-pub-5908373302541656/8012476929</string>
    <string name="banner_comision">ca-app-pub-5908373302541656/8453128926</string>
    <string name="banner_direccion">ca-app-pub-5908373302541656/2406595329</string>
    <string name="banner_equipo">ca-app-pub-5908373302541656/5360061726</string>

    <string name="interstitial_usuario">ca-app-pub-5908373302541656/1890061323</string>
    <string name="interstitial_adm">ca-app-pub-5908373302541656/3366794528</string>






</resources>
