<menu xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    tools:context="com.estrelladelsur.CrearArticulo" >

    <item
        android:id="@+id/action_usuario"
        android:orderInCategory="100"
        android:title="@string/action_usuario"
        app:showAsAction="never"/>
    <item
        android:id="@+id/action_posicion"
        android:orderInCategory="100"
        android:title="@string/action_posicion"
        app:showAsAction="never"/>
    <item
        android:id="@+id/action_cargo"
        android:orderInCategory="100"
        android:title="@string/action_cargo"
        app:showAsAction="never"/>
    <item
        android:id="@+id/action_cerrar"
        android:orderInCategory="100"
        android:title="@string/action_cerrar"
        app:showAsAction="never"/>
    <item
        android:id="@+id/action_guardar"
        android:icon="@drawable/ic_action_save"
        android:orderInCategory="100"
        android:title="@string/action_guardar"
        app:showAsAction="always"/>

</menu>